# SpinLock

./: .gitignore  CMakeLists.txt  README.md  spinlock.cpp  spinlock.hpp
for_genmc/: genmc_tests.cpp
google_tests/: CMakeLists.txt  tests.cpp
